          enum values will be treated as True by python.
    USER INTERFACE:
        - Now uses multithreading for those long computations that support it.
        - No longer reads the syntax highlighting theme from file; instead
          the theme is hard-coded into the executable.  This removes the
          build dependency on the Jansson JSON library.
    UTILITIES:
        tricensus:
            - Renamed option --tetrahedra to --top, with aliases --triangles,
              --tetrahedra and --pentachora.
            - New option --regina to output Regina data files (the default).
            - New option --dim3 for dimension 3 (the default).
            - Fixed a race condition with --threads where the number of
              triangulations reported on the console could be wrong (although
              the actual list of triangulations in the output file was correct).
        tricensus, retriangulate:
            - Ported the handling of command-line options from Popt to
              GNU getopt_long().  This removes the build dependency on Popt.
    TEST SUITE:
        - Ported the C++ test suite to use the GoogleTest framework (which is
          included with Regina's sources).  This removes the build dependency
          on CppUnit.

Version 7.3  [ 18 March, 2023 ]

    ENGINE:
        Class BitManipulator<T>:
            - Routines bits(), firstBit() and lastBit() are now constexpr.
        Class Component<4>:
            - Fix a bug where single-vertex boundary components were included
              in Triangulation<4>::boundaryComponents(), but were omitted from
              Component<4>::boundaryComponents().
        Class GroupExpression:
            - The string constructor now contracts terms like "aaaaBB" to become
              g0^4 g1^-2 (i.e., exponents will be used even if the input does
              not supply them).
            - The string constructor now takes the number of generators as an