@@ -200,6 +200,7 @@ SET (ENGINE_LIBRARY regina-engine)
 
 # Paths that we need to escape for @...@ substitution into bash/perl scripts
 REGINA_ESCAPE_BASH (CMAKE_SOURCE_DIR)
+REGINA_ESCAPE_BASH (CMAKE_BINARY_DIR)
 REGINA_ESCAPE_BASH (CMAKE_INSTALL_PREFIX)
 REGINA_ESCAPE_BASH (INCLUDEDIR)
 REGINA_ESCAPE_BASH (LIBDIR)
