@@ -147,6 +147,8 @@ Version 7.4  [ (to be announced) ]
           the theme is hard-coded into the executable.  This removes the
           build dependency on the Jansson JSON library.
     UTILITIES:
+        regina-helper:
+            - New command-line tool for performing miscellaneous tasks.
         tricensus:
             - Renamed option --tetrahedra to --top, with aliases --triangles,
               --tetrahedra and --pentachora.
